--- a/chat-application/client/package.json
+++ b/chat-application/client/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
@@ -19,10 +19,7 @@
     "react-scroll-to-bottom": "^2.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "simple-peer": "^9.6.2",
-    "socket.io-client": "^2.3.0",
-    "styled-components": "^5.1.0",
-    "uuid": "^8.0.0"
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
